--- a/css/The-Creator.css
+++ b/css/The-Creator.css
@@ -11,7 +11,7 @@ body
 }
 #preloader
 {
-   background: #FFFFFF url("../images/rotating-dots.gif") no-repeat center center;
+   background: #FFFFFF url("../images/bouncing-dot.gif") no-repeat center center;
    bottom: 0;
    position: fixed;
    top: 0;
@@ -264,7 +264,7 @@ body
    padding: 0;
    display: inline-block;
    width: 203px;
-   height: 201px;
+   height: 208px;
    vertical-align: top;
 }
 #wb_Text3 
@@ -949,728 +949,4 @@ body
 #wb_Icon3:hover #Icon3 i
 {
    color: #B7C3F3;
-}
-#wb_LayoutGrid7
-{
-   clear: both;
-   position: relative;
-   table-layout: fixed;
-   display: table;
-   text-align: center;
-   width: 100%;
-   background-color: transparent;
-   background-image: none;
-   border: 0px solid #CCCCCC;
-   border-radius: 0px;
-   box-sizing: border-box;
-   margin: 0;
-}
-#LayoutGrid7
-{
-   box-sizing: border-box;
-   display: flex;
-   flex-direction: row;
-   flex-wrap: wrap;
-   padding: 20px 0 20px 0;
-   margin-right: auto;
-   margin-left: auto;
-   max-width: 900px;
-}
-#LayoutGrid7 > .col-1, #LayoutGrid7 > .col-2
-{
-   box-sizing: border-box;
-   font-size: 0;
-   min-height: 1px;
-   padding-right: 15px;
-   padding-left: 15px;
-   position: relative;
-}
-#LayoutGrid7 > .col-1, #LayoutGrid7 > .col-2
-{
-   flex: 0 0 auto;
-}
-#LayoutGrid7 > .col-1
-{
-   background-color: transparent;
-   background-image: none;
-   border: 0px solid #FFFFFF;
-   border-radius: 0px;
-   flex-basis: 8.33333333%;
-   max-width: 8.33333333%;
-   display: flex;
-   flex-wrap: wrap;
-   align-content: center;
-   align-self: stretch;
-   align-items: center;
-   justify-content: center;
-   text-align: center;
-}
-#LayoutGrid7 > .col-2
-{
-   background-color: transparent;
-   background-image: none;
-   border: 0px solid #FFFFFF;
-   border-radius: 0px;
-   flex-basis: 83.33333333%;
-   max-width: 83.33333333%;
-   display: flex;
-   flex-wrap: wrap;
-   align-content: center;
-   align-self: stretch;
-   align-items: center;
-   justify-content: center;
-   text-align: center;
-}
-@media (max-width: 600px)
-{
-#LayoutGrid7 > .col-1, #LayoutGrid7 > .col-2
-{
-   flex-basis: 100% !important;
-   max-width: 100% !important;
-}
-}
-#wb_Image3
-{
-   margin: 0;
-   vertical-align: top;
-}
-#Image3
-{
-   border: 0px solid #000000;
-   border-radius: 0px;
-   box-sizing: border-box;
-   padding: 0;
-   display: block;
-   width: 100%;
-   height: auto;
-   max-width: 100px;
-   margin-left: auto;
-   margin-right: auto;
-   vertical-align: top;
-}
-#wb_Text2 
-{
-   background-color: transparent;
-   background-image: none;
-   border: 0px solid #000000;
-   border-radius: 0px;
-   padding: 0;
-   margin: 0;
-   text-align: center;
-}
-#wb_Text2 div
-{
-   text-align: center;
-}
-#wb_Text2
-{
-   display: block;
-   margin: 0;
-   box-sizing: border-box;
-   width: 100%;
-}
-#wb_Text4 
-{
-   background-color: transparent;
-   background-image: none;
-   border: 0px solid #000000;
-   border-radius: 0px;
-   padding: 0;
-   margin: 0;
-   text-align: center;
-}
-#wb_Text4
-{
-   color: #000000;
-   font-family: Arial;
-   font-weight: 400;
-   font-size: 17px;
-   line-height: 20px;
-}
-#wb_Text4 p, #wb_Text4 ul
-{
-   margin: 0;
-   padding: 0;
-}
-#wb_Text4
-{
-   display: block;
-   margin: 0;
-   box-sizing: border-box;
-   width: 100%;
-}
-#wb_Text5 
-{
-   background-color: transparent;
-   background-image: none;
-   border: 0px solid #000000;
-   border-radius: 0px;
-   padding: 10px 0 0 0;
-   margin: 0;
-   text-align: center;
-}
-#wb_Text5 div
-{
-   text-align: center;
-}
-#wb_Text5
-{
-   display: block;
-   margin: 0;
-   box-sizing: border-box;
-   width: 100%;
-}
-#wb_Text6 
-{
-   background-color: transparent;
-   background-image: none;
-   border: 0px solid #000000;
-   border-radius: 0px;
-   padding: 0;
-   margin: 0;
-   text-align: center;
-}
-#wb_Text6 div
-{
-   text-align: center;
-}
-#wb_Text6
-{
-   display: block;
-   margin: 0;
-   box-sizing: border-box;
-   width: 100%;
-}
-#wb_Text7 
-{
-   background-color: transparent;
-   background-image: none;
-   border: 0px solid #000000;
-   border-radius: 0px;
-   padding: 0;
-   margin: 0;
-   text-align: center;
-}
-#wb_Text7 div
-{
-   text-align: center;
-}
-#wb_Text7
-{
-   display: block;
-   margin: 0;
-   box-sizing: border-box;
-   width: 100%;
-}
-#wb_FontAwesomeIcon3
-{
-   background-color: transparent;
-   background-image: none;
-   border: 0px solid transparent;
-   border-radius: 0px;
-   text-align: center;
-   margin: 0;
-   padding: 0;
-   vertical-align: top;
-   display:inline-block;
-   position:relative;
-}
-#wb_FontAwesomeIcon3 a::after
-{
-   position: absolute;
-   top: 0;
-   right: 0;
-   bottom: 0;
-   left: 0;
-   z-index: 1;
-   pointer-events: auto;
-   content: "";
-}
-#FontAwesomeIcon3
-{
-   height: 40px;
-   width: 40px;
-}
-#FontAwesomeIcon3 i
-{
-   color: #0000FF;
-   display: inline-block;
-   font-size: 40px;
-   line-height: 40px;
-   vertical-align: middle;
-   width: 39px;
-}
-#wb_FontAwesomeIcon3:hover #FontAwesomeIcon3 i
-{
-   color: #FFFFFF;
-}
-#wb_FontAwesomeIcon2
-{
-   background-color: transparent;
-   background-image: none;
-   border: 0px solid transparent;
-   border-radius: 0px;
-   text-align: center;
-   margin: 0;
-   padding: 0;
-   vertical-align: top;
-   display:inline-block;
-   position:relative;
-}
-#wb_FontAwesomeIcon2 a::after
-{
-   position: absolute;
-   top: 0;
-   right: 0;
-   bottom: 0;
-   left: 0;
-   z-index: 1;
-   pointer-events: auto;
-   content: "";
-}
-#FontAwesomeIcon2
-{
-   height: 40px;
-   width: 40px;
-}
-#FontAwesomeIcon2 i
-{
-   color: #00BFFF;
-   display: inline-block;
-   font-size: 40px;
-   line-height: 40px;
-   vertical-align: middle;
-   width: 39px;
-}
-#wb_FontAwesomeIcon2:hover #FontAwesomeIcon2 i
-{
-   color: #FFFFFF;
-}
-#wb_FontAwesomeIcon4
-{
-   background-color: transparent;
-   background-image: none;
-   border: 0px solid transparent;
-   border-radius: 0px;
-   text-align: center;
-   margin: 0;
-   padding: 0;
-   vertical-align: top;
-   display:inline-block;
-   position:relative;
-}
-#wb_FontAwesomeIcon4 a::after
-{
-   position: absolute;
-   top: 0;
-   right: 0;
-   bottom: 0;
-   left: 0;
-   z-index: 1;
-   pointer-events: auto;
-   content: "";
-}
-#FontAwesomeIcon4
-{
-   height: 40px;
-   width: 40px;
-}
-#FontAwesomeIcon4 i
-{
-   color: #32CD32;
-   display: inline-block;
-   font-size: 40px;
-   line-height: 40px;
-   vertical-align: middle;
-   width: 39px;
-}
-#wb_FontAwesomeIcon4:hover #FontAwesomeIcon4 i
-{
-   color: #FFFFFF;
-}
-#wb_LayoutGrid8
-{
-   clear: both;
-   position: relative;
-   table-layout: fixed;
-   display: table;
-   text-align: center;
-   width: 100%;
-   background-color: transparent;
-   background-image: none;
-   border: 0px solid #CCCCCC;
-   border-radius: 0px;
-   box-sizing: border-box;
-   margin: 0;
-}
-#LayoutGrid8
-{
-   box-sizing: border-box;
-   width: 100%;
-   padding: 10px 15px 10px 15px;
-   margin-right: auto;
-   margin-left: auto;
-}
-#LayoutGrid8 > .row
-{
-   display: grid;
-   grid-template-columns: repeat(12, 8.333333%);
-   margin-right: -15px;
-   margin-left: -15px;
-}
-#LayoutGrid8 > .row > .col-1
-{
-   box-sizing: border-box;
-   font-size: 0;
-   min-height: 1px;
-   padding-right: 15px;
-   padding-left: 15px;
-   position: relative;
-   grid-column: span 12;
-}
-#LayoutGrid8 > .row > .col-1
-{
-}
-#LayoutGrid8 > .row > .col-1
-{
-   background-color: transparent;
-   background-image: none;
-   border: 0px solid #FFFFFF;
-   border-radius: 0px;
-   grid-column: span 12;
-   flex-wrap: wrap;
-   align-content: center;
-   align-self: stretch;
-   align-items: center;
-   text-align: center;
-}
-@media (max-width: 200px)
-{
-#LayoutGrid8 > .row > .col-1
-{
-   width: 100%;
-   grid-column: span 12;
-}
-}
-#wb_LayoutGrid9
-{
-   clear: both;
-   position: relative;
-   table-layout: fixed;
-   display: table;
-   text-align: center;
-   width: 100%;
-   background-color: transparent;
-   background-image: none;
-   border: 0px solid #CCCCCC;
-   border-radius: 0px;
-   box-sizing: border-box;
-   margin: 0;
-}
-#LayoutGrid9
-{
-   box-sizing: border-box;
-   padding: 0 15px 0 15px;
-   margin-right: auto;
-   margin-left: auto;
-}
-#LayoutGrid9 > .row
-{
-   margin-right: -15px;
-   margin-left: -15px;
-}
-#LayoutGrid9 > .row > .col-1
-{
-   box-sizing: border-box;
-   font-size: 0;
-   min-height: 1px;
-   padding-right: 15px;
-   padding-left: 15px;
-   position: relative;
-}
-#LayoutGrid9 > .row > .col-1
-{
-   float: left;
-}
-#LayoutGrid9 > .row > .col-1
-{
-   background-color: transparent;
-   background-image: none;
-   border: 0px solid #FFFFFF;
-   border-radius: 0px;
-   width: 100%;
-   text-align: center;
-}
-#LayoutGrid9:before,
-#LayoutGrid9:after,
-#LayoutGrid9 .row:before,
-#LayoutGrid9 .row:after
-{
-   display: table;
-   content: " ";
-}
-#LayoutGrid9:after,
-#LayoutGrid9 .row:after
-{
-   clear: both;
-}
-@media (max-width: 200px)
-{
-#LayoutGrid9 > .row > .col-1
-{
-   float: none;
-   width: 100% !important;
-}
-}
-#wb_Icon1
-{
-   background-color: transparent;
-   background-image: none;
-   border: 0px solid transparent;
-   border-radius: 0px;
-   text-align: center;
-   margin: 0;
-   padding: 0;
-   vertical-align: top;
-   display:inline-block;
-   position:relative;
-}
-#wb_Icon1 a::after
-{
-   position: absolute;
-   top: 0;
-   right: 0;
-   bottom: 0;
-   left: 0;
-   z-index: 1;
-   pointer-events: auto;
-   content: "";
-}
-#Icon1
-{
-   height: 40px;
-   width: 40px;
-}
-#Icon1 i
-{
-   color: #8B4513;
-   display: inline-block;
-   font-size: 40px;
-   line-height: 40px;
-   vertical-align: middle;
-   width: 39px;
-}
-#wb_Icon1:hover #Icon1 i
-{
-   color: #FFFFFF;
-}
-#wb_LayoutGrid10
-{
-   clear: both;
-   position: relative;
-   table-layout: fixed;
-   display: table;
-   text-align: center;
-   width: 100%;
-   background-color: transparent;
-   background-image: none;
-   border: 0px solid #CCCCCC;
-   border-radius: 0px;
-   box-sizing: border-box;
-   margin: 0;
-}
-#LayoutGrid10
-{
-   box-sizing: border-box;
-   padding: 0 15px 0 15px;
-   margin-right: auto;
-   margin-left: auto;
-}
-#LayoutGrid10 > .row
-{
-   margin-right: -15px;
-   margin-left: -15px;
-}
-#LayoutGrid10 > .row > .col-1
-{
-   box-sizing: border-box;
-   font-size: 0;
-   min-height: 1px;
-   padding-right: 15px;
-   padding-left: 15px;
-   position: relative;
-}
-#LayoutGrid10 > .row > .col-1
-{
-   float: left;
-}
-#LayoutGrid10 > .row > .col-1
-{
-   background-color: transparent;
-   background-image: none;
-   border: 0px solid #FFFFFF;
-   border-radius: 0px;
-   width: 100%;
-   text-align: center;
-}
-#LayoutGrid10:before,
-#LayoutGrid10:after,
-#LayoutGrid10 .row:before,
-#LayoutGrid10 .row:after
-{
-   display: table;
-   content: " ";
-}
-#LayoutGrid10:after,
-#LayoutGrid10 .row:after
-{
-   clear: both;
-}
-@media (max-width: 200px)
-{
-#LayoutGrid10 > .row > .col-1
-{
-   float: none;
-   width: 100% !important;
-}
-}
-#wb_Text9 
-{
-   background-color: transparent;
-   background-image: none;
-   border: 0px solid #000000;
-   border-radius: 0px;
-   padding: 10px 0 0 0;
-   margin: 0;
-   text-align: center;
-}
-#wb_Text9 div
-{
-   text-align: center;
-}
-#wb_Text9
-{
-   display: block;
-   margin: 0;
-   box-sizing: border-box;
-   width: 100%;
-}
-#SlideShow1 .image
-{
-   border-width: 0;
-   border-radius: 0px;
-   display: block;
-   float: left;
-   height: auto;
-   width: 100%;
-}
-#SlideShow1 li
-{
-   width: 100%;
-   left: 0;
-   top: 0;
-}
-#SlideShow1
-{
-   display: inline-block;
-   position: relative;
-   list-style: none;
-   width: 100%;
-   padding: 0;
-   margin: 0;
-}
-#SlideShow1 li a:not(:first-child) .image
-{
-   display: none;
-}
-#wb_LayoutGrid95
-{
-   clear: both;
-   position: relative;
-   table-layout: fixed;
-   display: table;
-   text-align: center;
-   width: 100%;
-   background-color: #008B8B;
-   background-image: none;
-   border: 0px solid #CCCCCC;
-   border-radius: 0px;
-   box-sizing: border-box;
-   margin: 0;
-}
-#LayoutGrid95
-{
-   box-sizing: border-box;
-   padding: 10px 15px 10px 15px;
-   margin-right: auto;
-   margin-left: auto;
-}
-#LayoutGrid95 > .row
-{
-   margin-right: -15px;
-   margin-left: -15px;
-}
-#LayoutGrid95 > .row > .col-1
-{
-   box-sizing: border-box;
-   font-size: 0;
-   min-height: 1px;
-   padding-right: 15px;
-   padding-left: 15px;
-   position: relative;
-}
-#LayoutGrid95 > .row > .col-1
-{
-   float: left;
-}
-#LayoutGrid95 > .row > .col-1
-{
-   background-color: transparent;
-   background-image: none;
-   border: 0px solid #FFFFFF;
-   border-radius: 0px;
-   width: 100%;
-   text-align: center;
-}
-#LayoutGrid95:before,
-#LayoutGrid95:after,
-#LayoutGrid95 .row:before,
-#LayoutGrid95 .row:after
-{
-   display: table;
-   content: " ";
-}
-#LayoutGrid95:after,
-#LayoutGrid95 .row:after
-{
-   clear: both;
-}
-@media (max-width: 480px)
-{
-#LayoutGrid95 > .row > .col-1
-{
-   float: none;
-   width: 100% !important;
-}
-}
-#wb_Text21 
-{
-   background-color: transparent;
-   background-image: none;
-   border: 0px solid #000000;
-   border-radius: 0px;
-   padding: 0;
-   margin: 0;
-   text-align: center;
-}
-#wb_Text21 div
-{
-   text-align: center;
-}
-#wb_Text21
-{
-   display: block;
-   margin: 0;
-   box-sizing: border-box;
-   width: 100%;
 }
